...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controllers.MyGroupActivity">

    <LinearLayout
        android:id="@+id/actionLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/mygroup_topRL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:background="@drawable/ic_group_background">

            <ImageButton
...
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/lightGreen"
                android:src="@drawable/ic_back_button" />

            <ImageButton
                android:id="@+id/mygroup_menuline_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
...
                android:padding="5dp"
                android:text="@string/remove_group"
                android:textColor="@color/red_save"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/group_backgroundLL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical">
...
                        android:padding="9dp"
                        android:background="@drawable/mygroup_photo_background"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/group_title_mygroupTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/avenir"
                    android:textStyle="bold"
...
