...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/recyclerRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="70dp"
        android:gravity="bottom|end"
        android:paddingHorizontal="5dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGroups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:elevation="5dp"
            tools:listitem="@layout/item_groups_red" />

...
